# rustMoment

./: Cargo.toml  machine.json  test.json
src/: app_builder.rs  configuration.rs  lib.rs  main.rs  service.rs  storage.rs  use_cases.rs
src/domain/: ballot_paper.rs  generic_domains.rs  mod.rs  scoreboard.rs  vote_outcome.rs  voting_machine.rs
src/interfaces/: cli_interfaces.rs  lexicon.rs  mod.rs
src/interfaces/lexicons/: english.rs  french.rs
src/interfaces/web_interfaces/: mod.rs  router.rs
src/interfaces/web_interfaces/html/: html_formatter.rs  html_handlers.rs  index.html  mod.rs  web_routes.rs
src/services/: mod.rs  stdio.rs  tcp.rs  udp.rs  web.rs
src/storages/: file.rs  memory.rs  mod.rs
