[package]
name = "rust_moment"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
axum = "0.8.1"
clap = { version = "4.5.27", features = ["derive"] }
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
